--- a/src/assets/styles/components/track-chart.css
+++ b/src/assets/styles/components/track-chart.css
@@ -51,7 +51,7 @@
 
 .track__chart--item img {
   border: 1px solid var(--accent-color);
-  border-radius: var(--sizing-xs);
+  border-radius: var(--rounded);
 }
 
 .track__chart--item img,
