--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -18,6 +18,37 @@ html {
   background: var(--selection-color);
 }
 
+/* scrollbars */
+body,
+html {
+  scrollbar-width: thin;
+  scrollbar-color: var(--accent-color) var(--gray-light);
+}
+
+::-webkit-scrollbar {
+  width: var(--sizing-xs);
+  height: var(--sizing-xs);
+}
+
+body::-webkit-scrollbar {
+  width: var(--sizing-md);
+  height: var(--sizing-md);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--accent-color);
+  border-radius: var(--rounded-full);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--gray-light);
+}
+
+::-webkit-scrollbar-button {
+  background-color: var(--accent-color);
+  border-radius: var(--rounded);
+}
+
 p,
 blockquote {
   line-height: var(--line-height-lg);
@@ -113,12 +144,12 @@ hr.large__spacing {
 /* tables */
 table {
   display: block;
-  overflow-x: auto;
+  overflow-x: scroll;
   width: 100%;
   max-width: fit-content;
   margin: 0 auto;
   white-space: nowrap;
-  border-radius: var(--sizing-xs);
+  border-radius: var(--rounded);
   border: 1px solid var(--gray-light);
 }
 
@@ -375,7 +406,7 @@ li {
 /* images */
 .image__banner {
   border: 1px solid var(--accent-color);
-  border-radius: var(--sizing-xs);
+  border-radius: var(--rounded);
   height: auto;
 }
 
@@ -430,8 +461,9 @@ select-pagination {
 .select select,
 select-pagination,
 select-pagination select {
-  min-height: calc(var(--sizing-3xl) * 1.25);
-  min-width:  calc(var(--sizing-3xl) * 4);;
+  min-width:  calc(var(--sizing-3xl) * 4);
+  padding-top: var(--sizing-xs);
+  padding-bottom: var(--sizing-xs);
 }
 
 .select select,
